# Aurora

./: .gitignore  app.py  pyproject.toml
src/aurora/: main.py
src/aurora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aurora/agents/: critique_agent.py  retrieval_agent.py  synthesis_agent.py  verification_agent.py
src/aurora/pipelines/: rag_pipeline.py
src/aurora/tools/: api_tools.py
